infrastructure/aws/cf-jenkins-ec2.yml
AWSTemplateFormatVersion: "2010-09-09"

Parameters:
    Ec2InstanceKeyPairName:
        Type: "String"
        Description: "Name of a key-pair for ec2-instances"
        Default: "ec2-kp"
    Ec2InstanceType:
        Type: "String"
        Description: "Type of the ec2-instances (arm-compatible)"
        Default: "t4g.small"

Resources:

    ServerInstanceRole:
        Type: "AWS::IAM::Role"
        Properties:
            RoleName: "jenkins-ec2"
            Path: "/"
            AssumeRolePolicyDocument:
                Version: "2012-10-17"
                Statement:
                    -   Effect: "Allow"
                        Principal:
                            Service:
                                - "ec2.amazonaws.com"
                        Action:
                            - "sts:AssumeRole"

    ServerInstanceProfile:
        Type: "AWS::IAM::InstanceProfile"
        Properties:
            InstanceProfileName: "jenkins-ec2"
            Path: "/"
            Roles:
                - !Ref ServerInstanceRole

    ServerSecurityGroup:
        Type: "AWS::EC2::SecurityGroup"
        Properties:
            GroupName: "jenkins-ec2"
            GroupDescription: "Allow HTTP/HTTPS and SSH inbound and outbound traffic"
            SecurityGroupIngress:
                -   IpProtocol: tcp
                    FromPort: 8080
                    ToPort: 8080
                    CidrIp: 0.0.0.0/0
                -   IpProtocol: tcp
                    FromPort: 443
                    ToPort: 443
                    CidrIp: 0.0.0.0/0
                -   IpProtocol: tcp
                    FromPort: 22
                    ToPort: 22
                    CidrIp: 0.0.0.0/0

    ServerInstance:
        Type: "AWS::EC2::Instance"
        Properties:
            ImageId: "ami-025c7096bc4cac207" # Ubuntu, 20.04 LTS, arm64
            InstanceType: !Ref Ec2InstanceType
            IamInstanceProfile: !Ref ServerInstanceProfile
            SecurityGroupIds:
                - !Ref ServerSecurityGroup
            KeyName: !Ref Ec2InstanceKeyPairName
            UserData:
                Fn::Base64: |
                    #!/bin/bash -xe

                    curl -fsSL https://pkg.jenkins.io/debian/jenkins.io-2023.key | sudo tee /usr/share/keyrings/jenkins-keyring.asc > /dev/null

                    echo deb [signed-by=/usr/share/keyrings/jenkins-keyring.asc] https://pkg.jenkins.io/debian binary/ | sudo tee /etc/apt/sources.list.d/jenkins.list > /dev/null

                    sudo apt-get update
                    sudo apt-get install fontconfig openjdk-11-jre -y
                    sudo apt-get install jenkins -y
                    sudo apt install docker.io -y

                    sudo usermod -a -G docker jenkins
                    sudo systemctl restart jenkins
